fixing alignment in product page

--- a/app/assets/stylesheets/category-submenu.css.scss
+++ b/app/assets/stylesheets/category-submenu.css.scss
@@ -49,14 +49,13 @@
   border-radius: 0 0 0 0;
 }
 
-.product-list-page .category-submenu li.dropdown-submenu, 
+.product-list-page .category-submenu .dropdown-submenu, 
 .welcome-page .first-split .first-split-submenu .dropdown-submenu
 {
     border-bottom: 1px solid #E0E0E0;
     line-height: 30px;
     position: relative;
     border-radius: 0 0 0 0;
-    padding: 0 0.5em;
 }
 
 .product-list-page .category-submenu .dropdown-submenu ul, 
