--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -28,6 +28,10 @@
   border-radius: 0 0 0 0;
 }
 
+.product-list-page .first_split .logo-images-block
+{
+  min-height: 7em;
+}
 
 .product-list-page .first_split .logo-images  img
 {
